syntax = "proto3";
import "Role.proto";
import "Npc.proto";
//protoc --proto_path=src\main\java\com\game\protobuf --java_out=src\main\java src\main\java\com\game\protobuf\MsgRoleInfo.proto

option java_package = "com.hailintang.client.protobuf.protoc";
option java_outer_classname = "MsgNpcInfoProto";
enum RequestType{
    TALKTONPC = 0;
}

message RequestNpcInfo{
    string requestId = 1;       // 请求id
    int32 userId = 2;           // 请求的uid
    string npcName = 3;         // npc名字
    RequestType type = 4;      // 请求类型
}

message ResponseNpcInfo{
    int32 result = 1;           // 返回结果
    int32 userId = 2;           // 返回的uid
    string content = 3;

    RequestType type = 4;       // 返回类型

    Role role = 5;          // 用户角色
    Npc npc = 6;            // npc
}